--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
 </head>
 
 <body>
+
+    <!-- Adding the Font Awesome -->
+    <script src="https://kit.fontawesome.com/7e8663fe81.js" crossorigin="anonymous"></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
